--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "composable-styled-components": "^0.0.16",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0"
